# notion_mcp

./: .gitignore  Python - Model Context Protocol.html  all_pages.json  database_structure.json  get structure noition.py  pages_batch_1.json  pages_batch_2.json  pages_batch_3.json  pages_batch_4.json  pages_batch_5.json  pages_batch_6.json  pages_batch_7.json  pages_batch_8.json  pyproject.toml  requirements.txt  test_server.py  uvx.toml
src/notion_mcp/: run_server.py  server.py  test_query.py
src/notion_mcp.egg-info/: PKG-INFO  SOURCES.txt
