[project]
name = "notion-mcp"
version = "0.1.0"
description = "Notion MCP Server"
dependencies = [
    "httpx",
    "python-dotenv"
    mcp"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uvx]
python = "3.11"
packages = ["mcp"]